--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,21 +5,23 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="action_logout">Logout</string>
-    <string name="title_activity_login">LoginActivity</string>
-    <string name="title_activity_sign_up">SignUpActivity</string>
+    <string name="title_activity_login">Login</string>
+    <string name="title_activity_sign_up">Sign Up</string>
     <string name="button_label_sign_up">Sign Up</string>
     <string name="hint_username">Username</string>
     <string name="hint_password">Password</string>
     <string name="hint_email">Email</string>
     <string name="button_label_login">Login</string>
     <string name="textview_label_sign_up">Sign Up</string>
-    <string name="error_title_sign_up">Error</string>
+    <string name="error_title">Error</string>
     <string name="error_message_sign_up">Please enter a valid username, password and email address!</string>
-    <string name="error_title_login">Error</string>
     <string name="error_message_login">Please enter a valid username and password!</string>
     <string name="fragment_title_1">Inbox</string>
     <string name="fragment_title_2">Friends</string>
     <string name="empty_message_inbox">No new messages!</string>
     <string name="empty_message_friends">Add friends to begin!</string>
+    <string name="title_activity_edit_friends">Edit Friends</string>
+    <string name="action_edit_friends">Edit Friends</string>
+    <string name="action_done">Done</string>
 
 </resources>
